minor changes to spacing and fixed image sizes.

--- a/styles/css/styles_300.css
+++ b/styles/css/styles_300.css
@@ -92,7 +92,7 @@ body {
 .projectsTitle {
   /*border: 1px dotted blue;*/
   font-size: 64px;
-  font-weight: 200;
+  font-weight: 400;
   text-align: center;
   height: 100px;
   margin-top: 50px; }
@@ -100,7 +100,7 @@ body {
 .project1 {
   background-color: transparent;
   height: 260px;
-  margin-top: 150;
+  margin-top: 100;
   cursor: pointer; }
 
 .project-img {
@@ -113,11 +113,15 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   position: relative;
   display: block;
-  	/*&:hover {
-  			transform: translateY(-10px);
-  			box-shadow: 0 12px 10px rgba(0,0,0,.2);
-  
-  		}*/ }
+  /*z-index: 1;*/ }
+  .project-img img {
+    height: 250px;
+    width: 250px;
+    margin: 0 auto;
+    display: block; }
+  .project-img:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 12px 10px rgba(0, 0, 0, 0.2); }
 
 .project-Info {
   height: 100%;
@@ -166,8 +170,11 @@ body {
       .infoRow:hover .projectContent p .glyphicon-wrench {
         font-size: 10px;
         font-weight: 200; }
-    .infoRow:hover .projectContent h5 {
-      text-align: justify; }
+    .infoRow:hover .projectContent .projectDescription {
+      text-align: justify;
+      /*font-size: 14px;
+      font-weight: 600;
+      line-height: 1.2;*/ }
 
 /* ///////// skillContent //////////*/
 .skillsDiv {
